--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,6 @@ Assets/Plugins/iOS/opencv2.framework/Versions/A/opencv2 filter=lfs diff=lfs merg
 /Users/matthewhallberg/CloakCV/Plugins/MacOS/opencv2.framework/Versions/A/opencv2 filter=lfs diff=lfs merge=lfs -text
 /Users/matthewhallberg/CloakCV/Plugins/MacOS/opencv2.framework/Versions/Current/opencv2 filter=lfs diff=lfs merge=lfs -text
 Plugins/MacOS/opencv2.framework/Versions/A/opencv2 filter=lfs diff=lfs merge=lfs -text
+assets/plugins/ios/opencv2.framework/opencv2 filter=lfs diff=lfs merge=lfs -text
+assets/plugins/ios/opencv2.framework/versions/a/opencv2 filter=lfs diff=lfs merge=lfs -text
+assets/plugins/ios/opencv2.framework/versions/current/opencv2 filter=lfs diff=lfs merge=lfs -text
