--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,7 +63,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\ARCamFeed.cs" />
+    <Compile Include="Assets\Scripts\ButtonAnim.cs" />
+    <Compile Include="Assets\Scripts\ButtonParent.cs" />
     <Compile Include="Assets\Scripts\EditorCamFeed.cs" />
+    <Compile Include="Assets\Scripts\ImageCreator.cs" />
     <Compile Include="Assets\Scripts\NativeLibAdapter.cs" />
     <Compile Include="Assets\Scripts\OpenCV.cs" />
     <None Include="Assets\notes.txt" />
